# pdf-plus

./: .gitignore  pyproject.toml
rocketpdf/: __main__.py  commands.py  rocketpdf.py  utils.py
rocketpdf/clitools/: __init__.py  selector.py  spinner.py  utils.py
rocketpdf/converter/: __init__.py  darwin.py  linux.py  win32.py
rocketpdf/doc_parser/: converter.py
rocketpdf/utils/: path.py
