[project]
requires-python = ">=3.11"
name = "rocketpdf"
version = "0.2.0"
description = "Comprehensive CLI tool for pdf handling"
authors = [{name="D4ario0", email="alexgarciat00@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "pymupdf>=1.24.12",
    "comtypes>=1.4.8; sys_platform == 'win32'",
    "unoconv>=0.9.0; sys_platform == 'linux'",
    "click>=8.1.7",
]

[tool.ruff]
line-length = 98

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[project.scripts]
rpdf = "rocketpdf.__main__:rpdf_cli"
